--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ header::before {
 header img {
   animation: topdown 400ms 200ms backwards;
 
-  padding: 3.2rem;
+  padding: 3.2rem 0;
 }
 
 header h1 {
@@ -70,7 +70,7 @@ header h1 {
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 
   text-align: center;
-  
+  -webkit-font-smoothing: antialiased;
   padding: 0.8rem 8.6rem;
   background: var(--bg-header-title);
   min-width: 100vw;
